troubleshooting and trying Promises in Ajax

--- a/starting-point/views/layout.html
+++ b/starting-point/views/layout.html
@@ -35,6 +35,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfQxgWt-LSZcEmTEN8581Uq9SzZHnpuys"></script>
     <script src="/js/utils.js"></script>
     <script src="/js/maps.js"></script>
+    <script src="/js/ajaxCalls.js"></script>
     <script src="/js/trip.js"></script>
     <script src="/js/day.js"></script>
     <script src="/js/attraction.js"></script>
